<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="101dp"
            android:layout_height="45dp"
            android:id="@+id/btnSearch"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textSize="@dimen/textSize"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/edtSearch"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edtSearch"
            android:hint="@string/search_movies_by_title"
            android:textSize="@dimen/textSize"
            android:inputType="text"
            android:lines="1"
            android:importantForAutofill="no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnSearch"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/btnNext"
            android:visibility="invisible"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/btnSearch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnBack"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/btnBack"
            android:visibility="invisible"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/btnSearch"
            app:layout_constraintRight_toLeftOf="@id/btnNext"
            app:layout_constraintLeft_toRightOf="@id/txtResultsCount"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultsCount"
            android:visibility="invisible"
            android:textColor="#000000"
            android:textSize="11sp"
            android:text="result"
            android:layout_marginLeft="5dp"
            app:layout_constraintRight_toLeftOf="@id/btnSearch"
            app:layout_constraintTop_toBottomOf="@id/btnSearch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/recycler"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:orientation="vertical"
            android:id="@+id/line"
            app:layout_constraintTop_toBottomOf="@id/txtResultsCount"
            app:layout_constraintBottom_toTopOf="@id/recycler"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/recycler"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@android:color/white"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avatar"
            android:scaleType="centerCrop"
            android:contentDescription="Profile Picture"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnMainActivity"
            android:text="Find your Movie"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:textSize="@dimen/textSize"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnFavActivity"
            android:text="Like list"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textSize="@dimen/textSize"
            android:textColor="@android:color/white"/>


    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>